fixing formatting on smaller devices

--- a/game/static/game/css/game_style.css
+++ b/game/static/game/css/game_style.css
@@ -1,7 +1,7 @@
 /*body { padding-top: 70px; }*/
 
 body {
-background-color:#d2d2d2;
+    background-color:#d2d2d2;
 }
 
 .centered{text-align:center;}
@@ -83,130 +83,6 @@ background-color:#d2d2d2;
     overflow-y: auto;
 }
 
-
-/*!
- * Start Bootstrap - Simple Sidebar (http://startbootstrap.com/)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
- */
-
-
-/* Toggle Styles */
-
-#wrapper {
-    padding-left: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-#wrapper.toggled {
-    padding-left: 250px;
-}
-
-#sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    left: 250px;
-    width: 0;
-    height: 100%;
-    margin-left: -250px;
-    overflow-y: auto;
-    background: #404040;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-    border-radius: 0px 7px 7px 0px;
-    overflow-x: hidden;
-}
-
-
-#page-content-wrapper {
-    width: 100%;
-    position: absolute;
-    padding: 15px;
-}
-
-
-/* Sidebar Styles */
-
-.sidebar-nav {
-    position: absolute;
-    top: 0;
-    width: 250px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.sidebar-nav li {
-    text-indent: 0px;
-    line-height: 40px;
-}
-
-.sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    /*color: #999999;*/
-    font-size: 16px;
-}
-
-.sidebar-nav li a:hover {
-    text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
-}
-
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-    text-decoration: none;
-}
-
-.sidebar-nav > .sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
-}
-
-.sidebar-nav > .sidebar-brand a {
-    color: #999999;
-}
-
-.sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
-}
-
-@media(min-width:768px) {
-    #wrapper {
-        padding-left: 0;
-    }
-
-    #wrapper.toggled {
-        padding-left: 250px;
-    }
-
-    #sidebar-wrapper {
-        width: 250px;
-    }
-
-    #wrapper.toggled #sidebar-wrapper {
-        width: 250px;
-    }
-
-    #page-content-wrapper {
-        padding: 20px;
-        position: relative;
-    }
-
-    #wrapper.toggled #page-content-wrapper {
-        position: relative;
-        margin-right: 0;
-    }
-}
-
 .popup {
     position: absolute;
     z-index:50;
@@ -233,8 +109,8 @@ background-color:#d2d2d2;
 
 #infection_status{
     position: absolute;
-    top: 60%;
-    left: 18%;
+    bottom: 0%;
+    left: 0%;
     width: 250px;
     height: 250px;
     border-radius: 10px;
@@ -243,6 +119,10 @@ background-color:#d2d2d2;
     overflow-y: auto;
     overflow-x: auto;
     background-color:white;
+}
+
+#infection_status.toggled {
+    display: none;
 }
 
 
@@ -272,4 +152,21 @@ text-align:center;
 .current_location_text {
     color: white;
     padding: 0px;
+}
+
+
+@media screen and (max-width: 1200px) and (min-width: 520px) {
+    #infection_status{
+        position: absolute;
+        bottom: 0%;
+        left: 0%;
+        width: 200px;
+        height: 150px;
+        border-radius: 10px;
+        border: 3px solid black;
+        margin: auto;
+        overflow-y: auto;
+        overflow-x: auto;
+        background-color:white;
+    }
 }
